Fixed some spacing, more code cleanup. Final sprint version. One stretch goal completed.

--- a/css/index.css
+++ b/css/index.css
@@ -128,6 +128,7 @@ table {
 }
 * {
   box-sizing: border-box;
+  border: 1px solid grey;
 }
 html {
   font-size: 62.5%;
@@ -187,7 +188,7 @@ div.nav {
   }
 }
 div.nav nav {
-  width: 50%;
+  width: 60%;
   margin: 0 auto;
   margin-top: 2%;
   display: flex;
@@ -195,7 +196,7 @@ div.nav nav {
 }
 @media (max-width:500px) {
   div.nav nav {
-    width: 100%;
+    width: 80%;
     flex-direction: 0;
     padding: 0;
     align-items: center;
@@ -225,6 +226,11 @@ footer {
 .home {
   margin-top: 6%;
 }
+@media (max-width:500px) {
+  .home {
+    margin-top: 20%;
+  }
+}
 .home .intro h2 {
   padding: 15px;
 }
@@ -242,7 +248,7 @@ footer {
   border-radius: 20px;
   height: 100%;
 }
-@media ((max-width:500px)) {
+@media (max-width:500px) {
   .home .space-images .sky,
   .home .space-images .launch {
     display: none;
@@ -253,6 +259,11 @@ footer {
 }
 .home .visit-planets {
   padding: 15px;
+}
+@media (max-width:500px) {
+  .home .visit-planets {
+    padding: 5px 15px 0px;
+  }
 }
 .home .visit-planets h3 {
   margin-top: 11px;
@@ -273,6 +284,11 @@ footer {
     flex-direction: column-reverse;
     padding: 20px 0 0;
     align-items: center;
+  }
+}
+@media (max-width:500px) {
+  .home .walk {
+    margin-top: 30px;
   }
 }
 .home .walk .walk-text {
@@ -299,7 +315,7 @@ footer {
   text-align: center;
   border-radius: 5px;
 }
-@media ((max-width:500px)) {
+@media (max-width:500px) {
   .home .walk .walk-text .btn {
     width: 100%;
     padding: 5% 0 5%;
@@ -326,7 +342,7 @@ footer {
   .home .walk .walk-img {
     width: 100%;
     flex-direction: 0;
-    padding: 0;
+    padding: 0 4% 0 0;
     align-items: center;
   }
 }
