--- a/less/global.less
+++ b/less/global.less
@@ -1,6 +1,7 @@
 // General Styles
 * {
   box-sizing: border-box;
+  border:1px solid grey;
 }
 
 html {
