--- a/less/navigation.less
+++ b/less/navigation.less
@@ -16,12 +16,12 @@ div.nav {
     text-align: center;
     .mobileView(100%,0,0);
     nav {
-        width:50%;
+        width:60%;
         margin:0 auto;
         margin-top: 2%;
         display:flex;
         justify-content: space-around;
-        .mobileView(100%,0,0);
+        .mobileView(80%,0,0);
     }
 
     a {
